--- a/utils.ipynb
+++ b/utils.ipynb
@@ -148,6 +148,7 @@
     "        return s\n",
     "    \n",
     "    df2 = df.copy()\n",
+    "    print(df2.columns)\n",
     "    df2['title'] = df2['title'].apply(replace_non_ascii)\n",
     "    return df2[~df2['title'].apply(contains_non_english)]\n",
     "\n",
