add analysis of finance jobs

--- a/job_skill_analysis.ipynb
+++ b/job_skill_analysis.ipynb
@@ -955,7 +955,7 @@
     }
    ],
    "source": [
-    "drop_words = ['data', 'skill', 'skills', 'learning', 'bi', 'analytical', 'business', 'microsoft', 'project', 'tools', 'etl']\n",
+    "drop_words = ['data', 'skill', 'skills', 'learning', 'bi', 'analytical', 'business', 'microsoft', 'project', 'tools']\n",
     "rename_rows = {'machine': 'machine learning', 'power': 'power bi', 'analysis': 'data analysis', 'science': 'data science'}\n",
     "word_count_df.drop(word_count_df[word_count_df['word'].isin(drop_words)].index, inplace=True)\n",
     "word_count_df.replace(rename_rows, inplace=True)\n",
@@ -1576,7 +1576,7 @@
     "grouped_skills = skills_fuzzymatch(exploded_df['cleaned_required_skills'], threshold=80)\n",
     "\n",
     "# Add a new column for grouped skills\n",
-    "exploded_df2 = exploded_df[exploded_df['cleaned_required_skills']!='etl'].copy()\n",
+    "# exploded_df2 = exploded_df[exploded_df['cleaned_required_skills']!='etl'].copy()\n",
     "exploded_df2['grouped_skill'] = exploded_df2['cleaned_required_skills'].apply(lambda row: assign_group(row, grouped_skills))\n",
     "\n",
     "exploded_df2['grouped_skill']"
