--- a/utils.ipynb
+++ b/utils.ipynb
@@ -187,17 +187,23 @@
     "# Convert dictionary column into new DataFrame columns\n",
     "def dict_to_cols(df, dict_column):\n",
     "    # Safely evaluate the dictionary column\n",
-    "    df[dict_column] = df[dict_column].apply(eval)\n",
+    "    # df[dict_column] = df[dict_column].apply(eval)\n",
     "    \n",
     "    # Normalize the dictionary column into separate columns\n",
     "    normalized_df = pd.json_normalize(df[dict_column])\n",
     "\n",
     "    # Replace 0 with None in the specified columns\n",
-    "    normalized_df[['min_salary_per_year', 'max_salary_per_year']] = \\\n",
-    "    normalized_df[['min_salary_per_year', 'max_salary_per_year']].replace(0, None)\n",
+    "    normalized_df[['min_hourly_salary', 'max_hourly_salary']] = \\\n",
+    "    normalized_df[['min_hourly_salary', 'max_hourly_salary']].replace(0, None)\n",
+    "    normalized_df[['min_yearly_salary', 'max_yearly_salary']] = \\\n",
+    "    normalized_df[['min_yearly_salary', 'max_yearly_salary']].replace(0, None)\n",
     "\n",
     "    # Replace None with 'not remote' in the 'is_remote' column\n",
     "    normalized_df['is_remote'] = normalized_df['is_remote'].fillna('not remote')\n",
+    "    normalized_df['is_remote'] = normalized_df['is_remote'].replace('False', 'not remote')\n",
+    "    normalized_df['is_remote'] = normalized_df['is_remote'].replace(False, 'not remote')\n",
+    "    normalized_df['is_remote'] = normalized_df['is_remote'].replace('True', 'remote')\n",
+    "    normalized_df['is_remote'] = normalized_df['is_remote'].replace(True, 'remote')\n",
     "    \n",
     "    # Combine the normalized columns with the original DataFrame (optional)\n",
     "    df = df.reset_index(drop=True)\n",
