test batch ai processing

--- a/job_location_analysis_fin.ipynb
+++ b/job_location_analysis_fin.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -276,7 +276,7 @@
        "[5 rows x 29 columns]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -299,7 +299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -316,7 +316,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -327,158 +327,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>companyName</th>\n",
-       "      <th>applyUrl</th>\n",
-       "      <th>experienceLevel</th>\n",
-       "      <th>location</th>\n",
-       "      <th>min_years_of_experience</th>\n",
-       "      <th>required_degree</th>\n",
-       "      <th>is_remote</th>\n",
-       "      <th>avg_hourly_salary</th>\n",
-       "      <th>avg_yearly_salary</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>Atlantic Group</td>\n",
-       "      <td>https://www.linkedin.com/jobs/view/financial-d...</td>\n",
-       "      <td>Executive</td>\n",
-       "      <td>New York, United States</td>\n",
-       "      <td>12.0</td>\n",
-       "      <td>BS</td>\n",
-       "      <td>not remote</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>225000.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>Palo Alto Networks</td>\n",
-       "      <td>https://www.linkedin.com/jobs/view/sr-manager-...</td>\n",
-       "      <td>Mid-Senior level</td>\n",
-       "      <td>Santa Clara, CA</td>\n",
-       "      <td>5.0</td>\n",
-       "      <td>BS</td>\n",
-       "      <td>not remote</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>183250.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>Piping Technology &amp; Products, Inc.</td>\n",
-       "      <td>https://www.linkedin.com/jobs/view/chief-finan...</td>\n",
-       "      <td>Executive</td>\n",
-       "      <td>Houston, TX</td>\n",
-       "      <td>10.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>not remote</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>LHH</td>\n",
-       "      <td>https://www.linkedin.com/jobs/view/chief-finan...</td>\n",
-       "      <td>Executive</td>\n",
-       "      <td>New York City Metropolitan Area</td>\n",
-       "      <td>8.0</td>\n",
-       "      <td>BS</td>\n",
-       "      <td>not remote</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>200000.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>National Vision Inc.</td>\n",
-       "      <td>https://www.linkedin.com/jobs/view/chief-finan...</td>\n",
-       "      <td>Not Applicable</td>\n",
-       "      <td>Upland, CA</td>\n",
-       "      <td>10.0</td>\n",
-       "      <td>BS</td>\n",
-       "      <td>not remote</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>150500.0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                          companyName  \\\n",
-       "0                      Atlantic Group   \n",
-       "1                  Palo Alto Networks   \n",
-       "2  Piping Technology & Products, Inc.   \n",
-       "3                                 LHH   \n",
-       "4                National Vision Inc.   \n",
-       "\n",
-       "                                            applyUrl   experienceLevel  \\\n",
-       "0  https://www.linkedin.com/jobs/view/financial-d...         Executive   \n",
-       "1  https://www.linkedin.com/jobs/view/sr-manager-...  Mid-Senior level   \n",
-       "2  https://www.linkedin.com/jobs/view/chief-finan...         Executive   \n",
-       "3  https://www.linkedin.com/jobs/view/chief-finan...         Executive   \n",
-       "4  https://www.linkedin.com/jobs/view/chief-finan...    Not Applicable   \n",
-       "\n",
-       "                          location  min_years_of_experience required_degree  \\\n",
-       "0          New York, United States                     12.0              BS   \n",
-       "1                  Santa Clara, CA                      5.0              BS   \n",
-       "2                      Houston, TX                     10.0             NaN   \n",
-       "3  New York City Metropolitan Area                      8.0              BS   \n",
-       "4                       Upland, CA                     10.0              BS   \n",
-       "\n",
-       "    is_remote  avg_hourly_salary  avg_yearly_salary  \n",
-       "0  not remote                NaN           225000.0  \n",
-       "1  not remote                NaN           183250.0  \n",
-       "2  not remote                NaN                NaN  \n",
-       "3  not remote                NaN           200000.0  \n",
-       "4  not remote                NaN           150500.0  "
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df = df[['companyName', 'applyUrl', 'experienceLevel', 'location', 'min_years_of_experience', 'required_degree', 'is_remote', 'avg_hourly_salary', 'avg_yearly_salary']].copy()\n",
-    "df.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(661, 9)"
+       "(661, 29)"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -503,7 +361,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -524,7 +382,7 @@
        "Name: count, Length: 322, dtype: int64"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -544,16 +402,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(1, 9)"
+       "(1, 29)"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -566,16 +424,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(1, 9)"
+       "(1, 29)"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -587,16 +445,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(3, 9)"
+       "(3, 29)"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -608,7 +466,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -619,6 +477,13 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -627,7 +492,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -636,7 +501,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -652,7 +517,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -687,7 +552,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -707,7 +572,7 @@
        "Name: remote_work, Length: 661, dtype: object"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -727,7 +592,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -776,7 +641,7 @@
        "1      remote     69"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -788,7 +653,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -818,7 +683,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -848,7 +713,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -865,7 +730,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -876,7 +741,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -901,12 +766,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
     "df.to_csv(f'{path}/{date}_linkedin_{type}_ai_salary_location.csv', index=False)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['title', 'companyName', 'salary', 'location', 'applyUrl',\n",
+       "       'contractType', 'description', 'experienceLevel', 'jobUrl',\n",
+       "       'publishedAt', 'sector', 'workType', 'posterFullName',\n",
+       "       'posterProfileUrl', 'companyId', 'companyUrl', 'ai_dict',\n",
+       "       'min_years_of_experience', 'min_hourly_salary', 'max_hourly_salary',\n",
+       "       'min_yearly_salary', 'max_yearly_salary', 'required_degree',\n",
+       "       'prefered_degree', 'is_remote', 'required_skills', 'preferred_degree',\n",
+       "       'avg_hourly_salary', 'avg_yearly_salary', 'cleaned_location',\n",
+       "       'remote_work'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 51,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
