--- a/job_salary_analysis_fin.ipynb
+++ b/job_salary_analysis_fin.ipynb
@@ -1556,6 +1556,34 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 159,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['title', 'companyName', 'salary', 'location', 'applyUrl',\n",
+       "       'contractType', 'description', 'experienceLevel', 'jobUrl',\n",
+       "       'publishedAt', 'sector', 'workType', 'posterFullName',\n",
+       "       'posterProfileUrl', 'companyId', 'companyUrl', 'ai_dict',\n",
+       "       'min_years_of_experience', 'min_hourly_salary', 'max_hourly_salary',\n",
+       "       'min_yearly_salary', 'max_yearly_salary', 'required_degree',\n",
+       "       'prefered_degree', 'is_remote', 'required_skills', 'preferred_degree',\n",
+       "       'avg_hourly_salary', 'avg_yearly_salary'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 159,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.columns"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
