--- a/job_skill_analysis_fin.ipynb
+++ b/job_skill_analysis_fin.ipynb
@@ -659,11 +659,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 120,
    "metadata": {},
    "outputs": [],
    "source": [
-    "exploded_df.to_csv('exploded_df.csv')\n",
+    "exploded_df.to_csv(f'{path}/{date}_linkedin_{type}_ai_skill_exploded.csv', index=False)\n",
     "# skill_counts.to_csv('skill_count.csv')"
    ]
   },
