--- a/utils.ipynb
+++ b/utils.ipynb
@@ -2,13 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
     "import pandas as pd\n",
-    "import ast\n",
+    "# import ast\n",
     "import re\n",
     "import time\n",
     "from datetime import datetime\n",
@@ -19,6 +19,8 @@
     "import matplotlib.pyplot as plt\n",
     "\n",
     "# AI\n",
+    "import tiktoken\n",
+    "import openai\n",
     "from openai import OpenAI\n",
     "from dotenv import load_dotenv\n",
     "from sklearn.cluster import KMeans\n",
@@ -480,10 +482,12 @@
     "        'New York City Metropolitan Area': 'New York, NY',\n",
     "        'Albany, New York Metropolitan Area': 'Albany, NY',\n",
     "        'District of Columbia, United States': 'Washington, DC',\n",
+    "        'Washington DC-Baltimore Area': 'Washington, DC',\n",
     "        'San Francisco County, CA': 'San Francisco, CA',\n",
     "        'San Francisco Bay Area': 'San Francisco, CA',\n",
     "        'Los Angeles Metropolitan Area': 'Los Angeles, CA',\n",
     "        'Los Angeles County, CA': 'Los Angeles, CA',\n",
+    "        'San Diego Metropolitan Area': 'San Diego, CA',\n",
     "        'Dallas-Fort Worth Metroplex': 'Dallas, TX',\n",
     "        'Austin, Texas Metropolitan Area': 'Austin, TX',\n",
     "        'San Antonio, Texas Metropolitan Area': 'San Antonio, TX',\n",
@@ -494,7 +498,13 @@
     "        'Greater Minneapolis-St. Paul Area': 'Minneapolis, MN',\n",
     "        'Detroit Metropolitan Area': 'Detroit, MI',\n",
     "        'Charlotte Metro': 'Charlotte, NC',\n",
-    "        'Green Bay, Wisconsin Metropolitan Area': 'Green Bay, WI'\n",
+    "        'Green Bay, Wisconsin Metropolitan Area': 'Green Bay, WI',\n",
+    "        'Greater Tampa Bay Area': 'Tampa, FL',\n",
+    "        'Greater Chicago Area': 'Chicago, IL',\n",
+    "        'Rochester, New York Metropolitan Area': 'Rochester, NY',\n",
+    "        'Nashville Metropolitan Area': 'Nashville, TN',\n",
+    "        'Topeka Metropolitan Area': 'Topeka, KS',\n",
+    "        'Raleigh-Durham-Chapel Hill Area': 'Raleigh, NC'\n",
     "    }\n",
     "    \n",
     "    df['cleaned_location'] = df['location'].map(location_mapping).fillna(df['location'])\n",
