--- a/utils_ai.ipynb
+++ b/utils_ai.ipynb
@@ -8,7 +8,7 @@
    "source": [
     "import os\n",
     "import pandas as pd\n",
-    "import datetime as datetime\n",
+    "from datetime import datetime\n",
     "import time as time\n",
     "# AI\n",
     "import tiktoken\n",
@@ -150,7 +150,7 @@
     "# string is cleaned to only return the python dictionary\n",
     "def transform(row):\n",
     "    json_data = row.to_json()\n",
-    "    print(json_data)\n",
+    "    # print(json_data)\n",
     "    # concat directions and the input text\n",
     "    prompt = f\"\"\"\n",
     "                Here is a JSON data: \n",
@@ -169,7 +169,7 @@
     "                - \"min_degree\": A string extracted from the \"description\" or left blank if not found.\n",
     "                - \"preferred_degree\": A string extracted from the \"description\" or left blank if not found.\n",
     "\n",
-    "                output the new JSON object minus \"description\".\n",
+    "                output the new JSON object.\n",
     "            \"\"\"\n",
     "    # print(prompt)\n",
     "    retry = 0\n",
@@ -181,22 +181,24 @@
     "            # Call API\n",
     "            response = client.chat.completions.create(\n",
     "                model=\"gpt-4o-mini\",\n",
-    "                messages=[{\"role\": \"user\", \"content\": prompt}],\n",
+    "                messages=[{\"role\": \"system\", \"content\": \"you are a expert data analyst\"},\n",
+    "                    {\"role\": \"user\", \"content\": prompt}],\n",
     "                timeout=60\n",
     "            )\n",
     "            content = str(response.choices[0].message.content)\n",
     "\n",
     "            # Handle 'null' and 'None' by replacing them with actual Python None\n",
     "            content = content.replace(\"null\", \"None\")\n",
-    "\n",
+    "            print('Raw content: ', content)\n",
     "            # Extract JSON-like content between first `{` and last `}`\n",
     "            start = content.find('{')\n",
     "            end = content.rfind('}')\n",
     "            if start != -1 and end != -1:\n",
     "                content = content[start:end+1]\n",
+    "                print('Json object: ', content)\n",
     "                # make sure it's a valid dictionary format that can be converted using eval\n",
-    "                row = pd.DataFrame([[content]], columns=['test_content'])\n",
-    "                row = row['test_content'].apply(eval)\n",
+    "                # row = pd.DataFrame([[content]], columns=['test_content'])\n",
+    "                row = pd.DataFrame(content)\n",
     "                print(f\"retrieved dictionary at {datetime.now()}\")\n",
     "                return content\n",
     "\n",
