--- a/utils2.ipynb
+++ b/utils2.ipynb
@@ -36,6 +36,95 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# # remove empty and duplicated data\n",
+    "def refine(df):\n",
+    "    cols_to_keep = ['id', 'publishedAt', 'title', 'location', 'salary', 'applyUrl', 'jobUrl',  'contractType', 'sector', 'workType', 'description', 'benefits', 'companyId', 'companyName', 'companyUrl', 'experienceLevel', 'posterFullName', 'posterProfileUrl']\n",
+    "    df1 = df[cols_to_keep].copy()\n",
+    "    print(f'Processing...length of data {len(df1)}')\n",
+    "    df1 = df1.dropna()\n",
+    "    print(f'droped empty rows, remaining {len(df1)}')\n",
+    "    df1 = df1.drop_duplicated(subset=['applyUrl'])\n",
+    "    df_sorted = df1.sort_values(by='publishedAt', ascending=False)\n",
+    "    df1 = df_sorted.drop_duplicated(subset=['title', 'companyName', 'location'], keep='first')\n",
+    "    print(f'droped duplicates, remaining {len(df1)}')\n",
+    "    return df1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# this function cleans the location names\n",
+    "\n",
+    "\n",
+    "\n",
+    "def clean_location_names(df):\n",
+    "    location_mapping = {\n",
+    "        'New York City Metropolitan Area': 'New York, NY',\n",
+    "        'Albany, New York Metropolitan Area': 'Albany, NY',\n",
+    "        'District of Columbia, United States': 'Washington, DC',\n",
+    "        'Washington DC-Baltimore Area': 'Washington, DC',\n",
+    "        'San Francisco County, CA': 'San Francisco, CA',\n",
+    "        'San Francisco Bay Area': 'San Francisco, CA',\n",
+    "        'Los Angeles Metropolitan Area': 'Los Angeles, CA',\n",
+    "        'Los Angeles County, CA': 'Los Angeles, CA',\n",
+    "        'San Diego Metropolitan Area': 'San Diego, CA',\n",
+    "        'Dallas-Fort Worth Metroplex': 'Dallas, TX',\n",
+    "        'Austin, Texas Metropolitan Area': 'Austin, TX',\n",
+    "        'San Antonio, Texas Metropolitan Area': 'San Antonio, TX',\n",
+    "        'Greater Philadelphia': 'Philadelphia, PA',\n",
+    "        'Greater Seattle Area': 'Seattle, WA',\n",
+    "        'Atlanta Metropolitan Area': 'Atlanta, GA',\n",
+    "        'Annapolis Junction, MD': 'Annapolis, MD',\n",
+    "        'Greater Minneapolis-St. Paul Area': 'Minneapolis, MN',\n",
+    "        'Detroit Metropolitan Area': 'Detroit, MI',\n",
+    "        'Charlotte Metro': 'Charlotte, NC',\n",
+    "        'Green Bay, Wisconsin Metropolitan Area': 'Green Bay, WI',\n",
+    "        'Greater Tampa Bay Area': 'Tampa, FL',\n",
+    "        'Greater Chicago Area': 'Chicago, IL',\n",
+    "        'Rochester, New York Metropolitan Area': 'Rochester, NY',\n",
+    "        'Nashville Metropolitan Area': 'Nashville, TN',\n",
+    "        'Topeka Metropolitan Area': 'Topeka, KS',\n",
+    "        'Raleigh-Durham-Chapel Hill Area': 'Raleigh, NC'\n",
+    "    }\n",
+    "    \n",
+    "    df['cleaned_location'] = df['location'].map(location_mapping).fillna(df['location'])\n",
+    "    \n",
+    "    return df['cleaned_location']\n",
+    "\n",
+    "def appliable_pos(df):\n",
+    "    # add two new columns\n",
+    "    df['applied'] = None\n",
+    "    df['resume_ver'] = None\n",
+    "    df['reason_not_apply'] = None\n",
+    "\n",
+    "    cols_to_keep = ['applyUrl', 'companyName', 'contractType', 'experienceLevel', 'jobUrl', 'location',\n",
+    "       'posterFullName', 'posterProfileUrl', 'publishedAt', 'salary', 'title', 'workType', 'dict_ai', 'min_years_of_experience', 'is_remote', 'applied', 'resume_ver', 'reason_not_apply']\n",
+    "\n",
+    "    # remove intern\n",
+    "    df = df[df['simplified_job_title']!='Intern']\n",
+    "\n",
+    "    # get remote jobs\n",
+    "    df_remote = df[(df['is_remote']=='remote') | (df['location']=='United States')]\n",
+    "\n",
+    "    # define local key words\n",
+    "    location_list = [', WI', 'Wisconsin', 'Milwaukee', 'Chicago']\n",
+    "    pattern = '|'.join(location_list)\n",
+    "\n",
+    "    # match location names with local key words\n",
+    "    df_local = df[df['location'].str.contains(pattern, case=False, na=False)]\n",
+    "    df_apply = pd.concat([df_remote, df_local], axis=0).reset_index(drop=True)\n",
+    "    return df_apply[cols_to_keep]"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -85,7 +174,7 @@
     "                df_test = pd.DataFrame([[content]], columns=['test_content'])\n",
     "                df_test = df_test['test_content'].apply(eval)\n",
     "                print(f\"retrieved dictionary at {datetime.now()}\")\n",
-    "                return ast.evaluate(content)\n",
+    "                return content\n",
     "\n",
     "            else:\n",
     "                print(f\"No valid JSON-like content found in response at {datetime.now()}\")\n",
@@ -475,66 +564,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# this function cleans the location names\n",
-    "def clean_location_names(df):\n",
-    "    location_mapping = {\n",
-    "        'New York City Metropolitan Area': 'New York, NY',\n",
-    "        'Albany, New York Metropolitan Area': 'Albany, NY',\n",
-    "        'District of Columbia, United States': 'Washington, DC',\n",
-    "        'Washington DC-Baltimore Area': 'Washington, DC',\n",
-    "        'San Francisco County, CA': 'San Francisco, CA',\n",
-    "        'San Francisco Bay Area': 'San Francisco, CA',\n",
-    "        'Los Angeles Metropolitan Area': 'Los Angeles, CA',\n",
-    "        'Los Angeles County, CA': 'Los Angeles, CA',\n",
-    "        'San Diego Metropolitan Area': 'San Diego, CA',\n",
-    "        'Dallas-Fort Worth Metroplex': 'Dallas, TX',\n",
-    "        'Austin, Texas Metropolitan Area': 'Austin, TX',\n",
-    "        'San Antonio, Texas Metropolitan Area': 'San Antonio, TX',\n",
-    "        'Greater Philadelphia': 'Philadelphia, PA',\n",
-    "        'Greater Seattle Area': 'Seattle, WA',\n",
-    "        'Atlanta Metropolitan Area': 'Atlanta, GA',\n",
-    "        'Annapolis Junction, MD': 'Annapolis, MD',\n",
-    "        'Greater Minneapolis-St. Paul Area': 'Minneapolis, MN',\n",
-    "        'Detroit Metropolitan Area': 'Detroit, MI',\n",
-    "        'Charlotte Metro': 'Charlotte, NC',\n",
-    "        'Green Bay, Wisconsin Metropolitan Area': 'Green Bay, WI',\n",
-    "        'Greater Tampa Bay Area': 'Tampa, FL',\n",
-    "        'Greater Chicago Area': 'Chicago, IL',\n",
-    "        'Rochester, New York Metropolitan Area': 'Rochester, NY',\n",
-    "        'Nashville Metropolitan Area': 'Nashville, TN',\n",
-    "        'Topeka Metropolitan Area': 'Topeka, KS',\n",
-    "        'Raleigh-Durham-Chapel Hill Area': 'Raleigh, NC'\n",
-    "    }\n",
-    "    \n",
-    "    df['cleaned_location'] = df['location'].map(location_mapping).fillna(df['location'])\n",
-    "    \n",
-    "    return df['cleaned_location']\n",
-    "\n",
-    "def appliable_pos(df):\n",
-    "    # add two new columns\n",
-    "    df['applied'] = None\n",
-    "    df['resume_ver'] = None\n",
-    "    df['reason_not_apply'] = None\n",
-    "\n",
-    "    cols_to_keep = ['applyUrl', 'companyName', 'contractType', 'experienceLevel', 'jobUrl', 'location',\n",
-    "       'posterFullName', 'posterProfileUrl', 'publishedAt', 'salary', 'title', 'workType', 'dict_ai', 'min_years_of_experience', 'is_remote', 'applied', 'resume_ver', 'reason_not_apply']\n",
-    "\n",
-    "    # remove intern\n",
-    "    df = df[df['simplified_job_title']!='Intern']\n",
-    "\n",
-    "    # get remote jobs\n",
-    "    df_remote = df[(df['is_remote']=='remote') | (df['location']=='United States')]\n",
-    "\n",
-    "    # define local key words\n",
-    "    location_list = [', WI', 'Wisconsin', 'Milwaukee', 'Chicago']\n",
-    "    pattern = '|'.join(location_list)\n",
-    "\n",
-    "    # match location names with local key words\n",
-    "    df_local = df[df['location'].str.contains(pattern, case=False, na=False)]\n",
-    "    df_apply = pd.concat([df_remote, df_local], axis=0).reset_index(drop=True)\n",
-    "    return df_apply[cols_to_keep]"
-   ]
+   "source": []
   }
  ],
  "metadata": {
