updated code for new data format

--- a/job_preprocessing_fin.ipynb
+++ b/job_preprocessing_fin.ipynb
@@ -313,6 +313,17 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "df0.sample(5).to_csv('test5.csv', index=False)\n",
+    "df0.sample(20).to_csv('test20.csv', index=False)\n",
+    "df0.sample(100).to_csv('test100.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
