--- a/utils.ipynb
+++ b/utils.ipynb
@@ -509,31 +509,7 @@
     "    \n",
     "    df['cleaned_location'] = df['location'].map(location_mapping).fillna(df['location'])\n",
     "    \n",
-    "    return df['cleaned_location']\n",
-    "\n",
-    "def appliable_pos(df):\n",
-    "    # add two new columns\n",
-    "    df['applied'] = None\n",
-    "    df['resume_ver'] = None\n",
-    "    df['reason_not_apply'] = None\n",
-    "\n",
-    "    cols_to_keep = ['applyUrl', 'companyName', 'contractType', 'experienceLevel', 'jobUrl', 'location',\n",
-    "       'posterFullName', 'posterProfileUrl', 'publishedAt', 'salary', 'title', 'workType', 'dict_ai', 'min_years_of_experience', 'is_remote', 'applied', 'resume_ver', 'reason_not_apply']\n",
-    "\n",
-    "    # remove intern\n",
-    "    df = df[df['simplified_job_title']!='Intern']\n",
-    "\n",
-    "    # get remote jobs\n",
-    "    df_remote = df[(df['is_remote']=='remote') | (df['location']=='United States')]\n",
-    "\n",
-    "    # define local key words\n",
-    "    location_list = [', WI', 'Wisconsin', 'Milwaukee', 'Chicago']\n",
-    "    pattern = '|'.join(location_list)\n",
-    "\n",
-    "    # match location names with local key words\n",
-    "    df_local = df[df['location'].str.contains(pattern, case=False, na=False)]\n",
-    "    df_apply = pd.concat([df_remote, df_local], axis=0).reset_index(drop=True)\n",
-    "    return df_apply[cols_to_keep]"
+    "    return df['cleaned_location']"
    ]
   }
  ],
